k8s/commandservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commandservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
      - name: commandservice
        image: smcgettrick/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commandservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - port: 80
      targetPort: 80
      name: commandservice
      protocol: TCP
