k8s/platformservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: smcgettrick/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platformservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      port: 80
      targetPort: 80
      protocol: TCP
    - name: platformgrpc
      port: 666
      targetPort: 666
      protocol: TCP
