k8s/AKS-Deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commandservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
      - name: commandservice
        image: sdmlmsacr.azurecr.io/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commandservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - port: 80
      targetPort: 80
      name: commandservice
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend:
              service:
                name: platformservice-clusterip-srv
                port:
                  number: 80
          - path: /api/c/platforms
            pathType: Prefix
            backend:
              service:
                name: commandservice-clusterip-srv
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: sdmlmsacr.azurecr.io/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platformservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      port: 80
      targetPort: 80
      protocol: TCP
    - name: platformgrpc
      port: 666
      targetPort: 666
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice-mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql
            name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: platformservice-mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
  - name: mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: platformservice-mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: platformservice-np-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: rmq-mgmt-port
            - containerPort: 5672
              name: rmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - name: rmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
  - name: rmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
